--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="project_page.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="index.css" rel="stylesheet" type="text/css" media="screen" />
 <title>表紙×Web×キュレーション</title>
 </head>
 
