論文へのリンクを追加

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 </div>
 
 
+<div id='thesis' class='section clearfix'>
+  <h2>発表論文</h2>
+  <a href="https://www.jstage.jst.go.jp/article/jsoft/25/1/25_609/_article/-char/ja/">重田桂誓, 松村敦, 宇陀則彦. 表紙生成エンジンを用いた二次元配置型Webキュレーションシステムの開発. 知能と情報（日本知能情報ファジィ学会誌）「WebインテリジェンスとインタラクションII」特集号, (2013/2).</a>
+</div>
+
+
 <div id='about_hyoushi' class='section clearfix'>
   <h2>Webページの表紙について</h2>
   
