--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<div class='movie'><iframe width="560" height="349" src="http://www.youtube.com/embed/cmrxOL9OS7w" frameborder="0" allowfullscreen></iframe></div>
   
-  <p>このように、テーマ別に情報をキュレーションした空間を簡単につくれます。現在サービス公開に向けて鋭意開発中です。</p>
+  <p>このように、テーマ別に情報をキュレーションした空間を簡単につくれます。</p>
 
   <div class='spaces clearfix'>
     <img class='space' src='images/curation1.png' />
